[metadata]
# replace with your username:
name = pybsrn
version = 0.0.1
author = Mathieu Delsaut
author_email = mathieu.delsaut@univ-reunion.fr
description = A python package to facilitate work with BSRN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LE2P/PyBSRN
project_urls =
    Bug Tracker = https://github.com/LE2P/PyBSRN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src